syntax = "proto3";

package omeapi.worker.v1beta1;

option go_package = "omeapi/worker/v1beta1";

service WorkerService {
  rpc GetState(GetStateRequest) returns (GetStateResponse) {}
  rpc SetState(SetStateRequest) returns (SetStateResponse) {}
  rpc QueryByState(QueryByStateRequest) returns (QueryByStateResponse) {}
}

enum WorkerState {
  WORKER_STATE_UNSPECIFIED = 0;
  WORKER_STATE_ONLINE = 1;
  WORKER_STATE_OFFLINE = 2;
  WORKER_STATE_ON_JOB = 3;
}

message GetStateRequest {
  string worker_id = 1;
}

message GetStateResponse {
  string worker_id = 1;
  WorkerState state = 2;
}

message SetStateRequest {
  string worker_id = 1;
  WorkerState state = 2;
}

message SetStateResponse {
  string worker_id = 1;
  WorkerState state = 2;
}

message QueryByStateRequest {
  WorkerState state = 1;
}

message Worker {
  string worker_id = 1;
  WorkerState state = 2;
}

message QueryByStateResponse {
  repeated Worker workers = 1;
}

